spine/RELEASES/v1.0.0/payload/_core/PROJECT_BRO_TEMPLATE.md
# PROJECT BRO TEMPLATE — the installable shape of a Project Bro / Project Bro-ի կաղապար

> **EN:** The reusable, installable shape of a Project Bro (`X/bro`) — **defined now, installed LATER** (§7 / §16).
> **No Project Bro is created and no project folder is touched in the clean build.** An install (a later, Gev-gated
> Rollout step, behind palette → preview → `YES`) copies this template into `X/`, fills the placeholders, pulls an
> approved spine release, and stamps the manifest. Same Bro everywhere — **only the memory is unique per project** (B1).
>
> **HY:** Project Bro-ի (`X/bro`) վերաօգտագործվող, install-վող ձևը — **հիմա սահմանված, ՀԵՏՈ install** (§7 / §16)։
> **Մաքուր build-ում ոչ մի Project Bro չի ստեղծվում ու ոչ մի project folder չի դիպչվում։** Install-ը (հետագա,
> Gev-gated Rollout քայլ, palette → preview → `YES`-ի հետևում) պատճենում է template-ը `X/`-ի մեջ, լցնում placeholder-ները,
> pull անում approved spine release ու stamp manifest-ը։ Նույն Bro ամ. տեղ — **միայն memory-ն է unique** (B1)։

---

## 1. Template structure / template-ի կառուցվածք

What an install will later create inside a project `X/` (the physical source lives at `tools/templates/project-bro/`):

```txt
X/bro/
  spine/                 local physical copy of an APPROVED spine release (pull/verify/stamp — Phase 4)
  memory/                that project's SEALED memory — the ONLY unique part (B1/B4/L8)
  logs/                  session · action · memory-write · local-audit · hook-blocks · errors
  bro.manifest.json      from bro.manifest.template.json (placeholders filled at install)
  health.report.md       generated by the local doctor
```

## 2. `bro.manifest.json` schema (Project Bro) / manifest-ի schema

```txt
bro_id · project_id · project_path · spine_version · skills_manifest_version · agents_manifest_hash ·
memory_schema_version · memory_scope (pinned to THIS project) · authority (ProjectBro) ·
last_memory_sync · last_audit · status
```

## 3. Isolation contract (binding) / մեկուսացման contract (binding)

- **EN:** `memory_scope` is pinned to this project; the Bro reads/writes ONLY its own `memory/`. It **cannot** read
  another project's memory (enforced by `cross-memory-read-guard`, §11/B4/L8). Memory flows **UP** to Super Bro as a
  read-only mirror only; spine flows **DOWN** as an approved release (B2). Super Bro never writes into this memory (B6).
- **HY:** `memory_scope`-ը pinned է այս project-ին; Bro-ն կարդում/գրում է ՄԻԱՅՆ իր `memory/`-ն։ **Չի** կարդում ուրիշ
  project-ի memory (`cross-memory-read-guard`, §11/B4/L8)։ Memory-ն ՎԵՐ՝ read-only mirror; spine-ը ՎԱՐ՝ approved release
  (B2)։ Super Bro-ն երբեք չի գրում այս memory-ի մեջ (B6)։

## 4. Install flow (designed; executed later, Gev-gated) / install flow

```txt
1) REGISTER PROJECT        write a registry entry only (metadata; no project files)        [preview -> YES]
2) INSTALL PROJECT BRO     create X/bro from this template + pull an approved spine release [preview -> YES]
3) UPDATE PROJECT BRO SPINE pull approved release -> verify hashes -> stamp spine_version   [preview -> YES]
4) RUN DOCTOR / PROJECT AUDIT  read-only health + boundary checks                            [read-only]
```

> **Clean-build status / մաքուր-build կարգավիճակ:** template + manifest schema + isolation contract + the install
> flow are **specified and palette-wired in DRY mode**; the rollout scripts (`tools/bro-register.ps1`,
> `tools/bro-install.ps1`, `tools/bro-update-spine.ps1`) **execute nothing** in the clean build. The first real install
> (and the proof of project-to-project isolation) is a later, separate Gev command. /
> template + schema + contract + flow **սահմանված ու palette-wired են DRY mode-ում**; rollout script-երը **ոչինչ չեն
> կատարում**։ Առաջին real install-ը (ու isolation-ի proof-ը) հետագա, առանձին Gev հրաման է։
